Unified aircraft and flights list into one component

--- a/src/app/components/items/itemDetailsComponent/itemDetails.component.html
+++ b/src/app/components/items/itemDetailsComponent/itemDetails.component.html
@@ -20,7 +20,7 @@
         </mat-card-content>
     </mat-card>
 
-    @for(section of sections?.sections; track section.title){
+    @for(section of sections.sections; track section.title){
         <mat-card>
             <mat-card-header>
                 <mat-card-title>
