--- a/src/app/components/items/singleItemComponent/singleItem.component.html
+++ b/src/app/components/items/singleItemComponent/singleItem.component.html
@@ -10,6 +10,9 @@
                             @if(col.icon){
                                 <mat-icon>{{col.icon}}</mat-icon>
                             }
+                            @else{
+                                <span class="spacer"></span>
+                            }
                             @if(col.text){
                                 <div>
                                     {{ getFieldValue(col.text, item) }}
@@ -22,6 +25,9 @@
                             <div>
                             @if(col.icon){
                                 <mat-icon>{{col.icon}}</mat-icon>
+                            }
+                            @else{
+                                <span class="spacer"></span>
                             }
                             @if(col.text){
                                 <div>
