--- a/src/app/pages/flightsPage/flightsPage.component.html
+++ b/src/app/pages/flightsPage/flightsPage.component.html
@@ -11,7 +11,7 @@
              <app-item-list [items]="flights" [selectedItem]="selectedFlight" [sections]="listSections"></app-item-list>
         </mat-drawer>
         <mat-drawer-content>
-            <app-item-details [item]="selectedFlight" [sections]="detailsSections"></app-item-details>
+            <app-item-details [item]="selectedFlight" [sections]="detailsSections" [delete]="deleteFlight" [saveChanges]="saveFlight"></app-item-details>
         </mat-drawer-content>
     </mat-drawer-container>
 
