--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,6 +5,7 @@
 }
 .app-container{
     background-color: var(--mat-sys-background);
+    // background-color: white;
     color: var(--mat-sys-on-background);
 }
 mat-sidenav{
