--- a/src/app/components/navigation/sidenav/sidenav.component.html
+++ b/src/app/components/navigation/sidenav/sidenav.component.html
@@ -1,15 +1,30 @@
   <div>
     <ul>
-      <a [routerLink]="'/'" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}"><li>Strona Główna</li></a>
+      <li>
+        <a [routerLink]="'/'" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">Strona Główna</a>
+      </li>
       @if (!loggedIn()) {
-        <a [routerLink]="'/login'" [routerLinkActive]="['active']"><li>Logowanie</li></a>
-        <a [routerLink]="'/register'" [routerLinkActive]="['active']"><li>Rejestracja</li></a>
+        <li>
+          <a [routerLink]="'/login'" [routerLinkActive]="['active']">Logowanie</a>
+        </li>
+        <li>
+          <a [routerLink]="'/register'" [routerLinkActive]="['active']">Rejestracja</a>
+        </li>
       }
       @if (loggedIn()) {
-        <a [routerLink]="'/dashboard'" [routerLinkActive]="['active']" ><li><mat-icon>dashboard</mat-icon><div>Panel</div></li></a>
-        <a [routerLink]="'/aircraft'" [routerLinkActive]="['active']" ><li><mat-icon>flightmode_active</mat-icon><div>Samoloty</div></li></a>
-        <a [routerLink]="'/flights'" [routerLinkActive]="['active']" ><li><mat-icon>flight_takeoff</mat-icon><div>Loty</div></li></a>
-        <a [routerLink]="'/account'" [routerLinkActive]="['active']" ><li><mat-icon>person</mat-icon><div>Konto</div></li></a>
+        <li>
+          <a [routerLink]="'/dashboard'" [routerLinkActive]="['active']" ><mat-icon>dashboard</mat-icon><div>Panel</div></a>
+        </li>
+        <li>
+          <a [routerLink]="'/aircraft'" [routerLinkActive]="['active']" ><mat-icon>flightmode_active</mat-icon><div>Samoloty</div></a>
+        </li>
+        <li>
+          <a [routerLink]="'/flights'" [routerLinkActive]="['active']" ><mat-icon>flight_takeoff</mat-icon><div>Loty</div></a>
+          <ul>
+            <a [routerLink]="'/flights/add'" [routerLinkActive]="['active']"><mat-icon>add</mat-icon><div>Utwórz lot</div></a>
+          </ul>
+        </li>
+        <!-- <a [routerLink]="'/account'" [routerLinkActive]="['active']" ><li><mat-icon>person</mat-icon><div>Konto</div></li></a> -->
       }
     </ul>
   </div>
