--- a/src/app/components/items/itemDetailsComponent/itemDetails.component.scss
+++ b/src/app/components/items/itemDetailsComponent/itemDetails.component.scss
@@ -3,6 +3,15 @@
     width: calc(100% - 2rem);
     height: calc(100% - 2rem);
     padding: 1rem;
+    mat-form-field{
+        // background-color: red;
+        width: 100%;
+        input{
+            // background-color: blue;
+            text-align: right;
+            color: var(--mat-sys-body-large);
+        }
+    }
     mat-card{
         mat-button-toggle{
             margin-right: 10px;
@@ -16,22 +25,6 @@
         }
         mat-card-content{
             margin-top: 1rem;
-            table{
-                width: 100%;
-                border-collapse: collapse;
-                td, th{
-                    width: 50%;
-                    padding: .5rem;
-                    border: 1px solid var(--mat-sys-outline-variant);
-                    height: 3.5rem;
-                }
-                td[contenteditable=true]{
-                    background-color: var(--mat-sys-surface-container-low);
-                }
-                tr:hover{
-                    background-color: var(--mat-sys-surface-container-low);
-                }
-            }
             mat-form-field{
                 display: inline;
             }
@@ -44,4 +37,63 @@
     flex-direction: column;
     justify-content: center;
     user-select: none;
+}
+
+section{
+    // padding-left: 2rem;
+    // padding-right: 2rem;
+    font: var(--mat-sys-body-large);
+    header{
+        margin: 1.5rem 0;
+        div{
+            display: flex;
+            gap: 1rem;
+        }
+    }
+    .content{
+        display: grid;
+        grid-template-columns: 50% 50%;
+        padding-left: 2rem;
+        .property{
+            mat-icon{
+                position: relative;
+                top: 20px;
+            }
+            line-height: 4rem;
+            display: flex;
+            gap: 1rem;
+        }
+        .value{
+            vertical-align: middle;
+            text-align: right;
+        }
+    }
+}
+
+// @media( min-width: 1480px){
+// .detailsContainer{
+//     section{
+//         padding-left: 0;
+//         padding-right: 0;
+//     }
+//     hr{
+//         display: none;
+//     }
+//     display: grid;
+//     gap: 2rem;
+//     grid-template-columns: auto auto;
+//     header{
+//         margin-top: 0 !important;
+//     }
+// }
+// .content{
+//     padding-left: 1rem !important;
+// }
+// }
+
+.grid{
+    padding: 1rem;
+    display: grid;
+    grid-template-columns: auto auto;
+    gap: 1rem;
 }
