--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,8 +18,9 @@ html {
 body {
   color-scheme: light;
 
-  background-color: var(--mat-sys-surface);
-  color: var(--mat-sys-on-surface);
+  // background-color: var(--mat-sys-background);
+  background-color: white;
+  color: var(--mat-sys-on-background);
   font: var(--mat-sys-body-medium);
 
   margin: 0;
