--- a/src/app/components/items/singleItemComponent/singleItem.component.scss
+++ b/src/app/components/items/singleItemComponent/singleItem.component.scss
@@ -18,6 +18,7 @@ mat-card{
             text-align: justify;
             td, th{
                 padding: 0 0.5rem;
+                text-align: center;
                 div{
                     display: flex;
                     justify-content: space-between;
