--- a/src/app/pages/flightsPage/flightsPage.component.html
+++ b/src/app/pages/flightsPage/flightsPage.component.html
@@ -36,11 +36,11 @@
                         </div>
                     </div>
                  </header>
-                <div class="description">
+                <!-- <div class="description">
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, reprehenderit? Eius deserunt cupiditate omnis neque?
                     </p>
-                 </div>
+                 </div> -->
 
             }
             <app-item-details [item]="selectedFlight" [sections]="detailsSections" [delete]="deleteFlight" [saveChanges]="saveFlight"></app-item-details>
