--- a/src/app/pages/flightsPage/flightsPage.component.html
+++ b/src/app/pages/flightsPage/flightsPage.component.html
@@ -13,7 +13,10 @@
         <mat-drawer-content>
             @if(selectedFlight()){
                 <!-- FlightMap -->
-                 <app-map [selectedFlight]="selectedFlight"></app-map>
+                 <div style="width: 100%; height: 65vh;">
+                    <app-map [aerodrome1]="lineaerodrome1" [aerodrome2]="lineaerodrome2"></app-map>
+                    <!-- {{lineaerodrome1}} -->
+                 </div>
                  <header>
                     <div class="info">
                         <div>
